# cozyterm

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  package.json  pyproject.toml  serve.toml  tsconfig.json
.cozyterm/commands/: review.md  test.md
.github/workflows/: ci.yml
homebrew/: cozyterm.rb
site/: index.html
src/agents/: agent.ts  planner.ts
src/commands/: agents-md.ts
src/config/: config.ts
src/cozycli/: __init__.py  __main__.py  app.py  styles.tcss
src/cozycli/claude/: prompts.py  session.py
src/cozycli/screens/: safety_confirm.py  welcome.py
src/cozycli/widgets/: command_panel.py  suggestion_bar.py
src/cozyterm/: __init__.py  __main__.py  app.py  styles.tcss
src/cozyterm/claude/: message_handler.py  prompts.py  session.py
src/cozyterm/core/: command_runner.py  safety.py
src/cozyterm/screens/: welcome.py
src/cozyterm/widgets/: chat_panel.py  file_browser.py
src/forge/: collector.ts  db.ts
src/lsp/: client.ts
src/mcp/: client.ts
src/providers/: anthropic.ts  multi-model.ts  ollama.ts
src/sessions/: history.ts
src/tools/: edit.ts  types.ts  undo.ts
src/tui/: App.tsx
src/tui/components/: Chat.tsx  PermissionPrompt.tsx  StatusBar.tsx
src/tui/themes/: theme.ts  tokyonight.ts
tests/: test_app.py  test_command_runner.py  test_message_handler.py  test_safety.py
