[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cozycli"
version = "0.1.0"
description = "A cozy terminal coach powered by Claude"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.75.0",
    "anthropic>=0.42.0",
]

[project.optional-dependencies]
web = ["textual-web>=0.7.0"]

[project.scripts]
cozycli = "cozycli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cozycli"]
